# fastapi-validation-error-handler

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt
examples/: main.py
fastapi_validation_error_handler/: __init__.py  error_handler.py  openapi_patch.py
tests/: test_error_handler.py  test_openapi_patch.py
